[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygwan"
version = "0.1.1"
authors = [{ name = "Tarmica Chiwara", email = "tarimicac@gmail.com" }]
description = "Unofficial Python wrapper for the WhatsApp Cloud API by Tarmica Chiwara"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/pygwan"
