[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygwan"
version = "0.1.8"
authors = [{ name = "Tarmica Chiwara", email = "tarimicac@gmail.com" }]
description = "Official Python wrapper for the WhatsApp Cloud API by Tarmica Chiwara"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["whatsapp", "api", "messaging", "chatbot", "opensource"]

[project.urls]
Repository = "https://github.com/lordskyzw/pygwan"



